<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical"
    android:padding="20dp"
    android:textAlignment="center">

    <TextView
        android:id="@+id/about_filiated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/about_rights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rights"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/about_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/created"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/about_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/white" />

</LinearLayout>