<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_below="@id/movie_backdrop"
    android:background="@color/dark_grey"
    android:elevation="4dp"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:layout_marginBottom="10dp">

    <CheckBox
        android:id="@+id/movie_viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/movie_bookmark"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:button="@android:color/transparent"
        android:drawablePadding="3dp"
        android:drawableTop="@drawable/tool_checkbox_viewed"
        android:text="@string/watched"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/movie_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:button="@android:color/transparent"
        android:drawablePadding="3dp"
        android:drawableTop="@drawable/tool_checkbox_bookmark"
        android:text="@string/to_watch"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/movie_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/movie_bookmark"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:button="@android:color/transparent"
        android:drawablePadding="3dp"
        android:drawableTop="@drawable/tool_checkbox_favorite"
        android:text="@string/favorite"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

</RelativeLayout>